--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+3.3.1
+=====
+
+Use a new wallpaper
+Improve notebook tabs padding
+Enable transparency and rounded corners for tooltips
+Correctly theme GtkSwitch for the dark variant
+Fix gnome-panel theming for fallback mode
+
 3.2.0
 =====
 
