--- a/po/nb.po
+++ b/po/nb.po
@@ -1,22 +1,21 @@
-# Norwegian bokml translation of gnome-themes-standard.
+# Norwegian bokmål translation of gnome-themes-standard.
 # Copyright (C) 2010 gnome-themes-standard's package authors.
 # This file is distributed under the same license as the gnome-themes-standard package.
 #
-# Kjartan Maraas <kmaraas@gnome.org>, 2010.
+# Kjartan Maraas <kmaraas@gnome.org>, 2010-2012.
 # Torstein Adolf Winterseth <kvikende@fsfe.org>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-themes-standard\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-03-02 20:46+0100\n"
-"PO-Revision-Date: 2011-03-02 20:46+0100\n"
-"Last-Translator: Torstein Adolf Winterseth <kvikende@fsfe.org>\n"
-"Language-Team: Norwegian Bokmål <i18n-nb@lister.ping.uio.no>\n"
-"Language: \n"
+"POT-Creation-Date: 2012-01-28 16:06+0100\n"
+"PO-Revision-Date: 2012-01-28 16:08+0100\n"
+"Last-Translator: Kjartan Maraas <kmaraas@gnome.org>\n"
+"Language-Team: Norwegian bokmål <i18n-nb@lister.ping.uio.no>\n"
+"Language: nb\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Lokalize 1.1\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #: ../themes/Adwaita/backgrounds/adwaita.xml.in.in.h:1
